# online_library

./: .env-example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
infra/: docker-compose.local.yml
src/: config.py  main.py
src/api/dependecies/: auth.py  db.py  utils.py
src/db/: __init__.py  database.py
src/db/mixins/: pk.py
src/exceptions/api/: auth.py
src/exceptions/service/: user.py
src/migrations/: env.py
src/migrations/versions/: 2025_07_21_1324-1101b7400c8e_add_base_user_model.py  2025_07_22_1320-5ce0ae1a5128_add_role_to_user_model.py  2025_07_23_1034-744d652256b4_implement_user_roles_permissions.py  2025_07_24_1233-242b057b087a_add_password_to_user.py
src/models/: permission.py  user.py
src/repositories/: base.py  permission.py  user.py
src/repositories/mappers/: base.py  permission.py  user.py
src/schemas/: auth.py  pagination.py  permission.py  user.py
src/schemas/base/: fields.py
src/schemas/enums/: user.py
src/services/: auth.py  base.py  jwt.py
src/utils/: transaction.py
