[project]
name = "Online-library"
version = "0.1.0"
description = "..."
requires-python = "==3.11.2"
dependencies = [
    "alembic==1.16.4",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "celery==5.5.3",
    "fastapi[standard]==0.116.1",
    "greenlet==3.2.3",
    "gunicorn==23.0.0",
    "inflect==7.5.0",
    "pre-commit==4.2.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pyjwt[crypto]==2.10.1",
    "pyright==1.1.403",
    "redis==6.2.0",
    "ruff==0.12.4",
    "sqlalchemy==2.0.41",
    "uvicorn[standard]==0.35.0",
]

[tool.ruff]
line-length = 88
exclude = [
    "src/migrations",
]

[tool.ruff.lint]
select = [
    "I",
    "F",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.pyright]
include = [
    "src",
]
